<resources>
    <string name="app_name">P T</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_landmark">Enter landmark</string>
    <string name="enter_address">Enter address</string>
    <string name="select_gender">Select gender</string>

    <string name="confirm_password">Confirm password</string>
    <string name="upload_uid">Upload UID</string>
    <string name="add_thumb">Add Thumb</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="search">Search</string>
    <string name="add_money">Add Money</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="transaction_history">Transaction History</string>
    <string name="search_on_map">Search On Map</string>
    <string name="loan">Loan</string>
    <string name="enter_email">Enter email</string>
    <string name="thumb">Thumb</string>
    <string name="scan_finger_print_to_authenticate">Scan finger print to authenticate</string>
    <string name="confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify">Verify</string>
    <string name="enter_otp_to_verify">Enter OTP to verify</string>
    <string name="admin">Admin</string>
    <string name="update">Update</string>
    <string name="search_file_by_name">Search file by name</string>
    <string name="upload_file">Upload file</string>
    <string name="upload_image">Upload Image</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyClCN7T0VPX7MIoOJEMA3W9JLXhV_S7yx4</string>
    <string name="enter_account_number">Enter account number</string>

    <string name="enter_amount">Enter amount</string>
    <string name="send">Send</string>
    <string name="upload_qr_image">Upload QR image</string>
    <string name="submit">Submit</string>
    <string name="enter_atm_location">Enter atm location</string>
    <string name="enter_atm_address">Enter atm address</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="add_location">Add Location</string>
    <string name="enter_start_point">Enter start point</string>
    <string name="enter_end_point">Enter end point</string>
    <string name="upload">Upload</string>
    <string name="view_requested_user">View Requested User</string>
    <string name="send_qr_code">Send QR Code</string>
    <string name="add_atm">Add ATM</string>
    <string name="view_loan_requests">View Loan Requests</string>
    <string name="view_users">View Users</string>

    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="amount">Amount</string>
    <string name="sent">Sent</string>


    <string-array name="loan_reasons">

        <item>Select</item>
        <item>Education</item>
        <item>Business</item>

    </string-array>

</resources>
